--- a/PovikajMajstor/Base.lproj/Main.storyboard
+++ b/PovikajMajstor/Base.lproj/Main.storyboard
@@ -667,7 +667,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="portfolijoKelija" rowHeight="222" id="DGo-eR-TU7" customClass="PortfolioTableViewCell" customModule="PovikajMajstor" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="portfolio" rowHeight="222" id="DGo-eR-TU7" customClass="PortfolioTableViewCell" customModule="PovikajMajstor" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="222"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DGo-eR-TU7" id="zzr-rR-kpl">
@@ -821,8 +821,7 @@
                         <rightBarButtonItems>
                             <barButtonItem title="Raboti" id="m9R-ud-Nct">
                                 <connections>
-                                    <action selector="rabotiButtonPressed:" destination="aAu-z9-Mf2" id="13A-ER-IgY"/>
-                                    <segue destination="48Y-sQ-Akh" kind="show" id="ckE-GB-cyO"/>
+                                    <action selector="rabotiPressed:" destination="aAu-z9-Mf2" id="ExH-fS-pvq"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem title="Refresh" image="magnifyingglass" catalog="system" id="aea-cO-qLq">
@@ -833,6 +832,9 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="48Y-sQ-Akh" kind="show" identifier="tomajstorraboti" id="Gwu-uI-ULp"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="djp-mI-S5S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -841,53 +843,57 @@
         <!--Raboti-->
         <scene sceneID="Eb8-WK-Und">
             <objects>
-                <tableViewController id="48Y-sQ-Akh" sceneMemberID="viewController">
+                <tableViewController id="48Y-sQ-Akh" customClass="MajstorRabotiTableViewController" customModule="PovikajMajstor" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="AEv-Wz-fGl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="60" id="Avv-7D-vlw">
-                                <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="rabotakelija" rowHeight="91" id="Avv-7D-vlw" customClass="MajstorRabotaTableViewCell" customModule="PovikajMajstor" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="91"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Avv-7D-vlw" id="oaM-ag-o5A">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="91"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yx4-X7-Mof">
-                                            <rect key="frame" x="16" y="20" width="28" height="21"/>
+                                            <rect key="frame" x="16" y="11" width="184" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Prezime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHI-qP-jlp">
-                                            <rect key="frame" x="96" y="20" width="62" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Prezime" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHI-qP-jlp">
+                                            <rect key="frame" x="208" y="10" width="151" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6X4-jH-1Z5">
+                                            <rect key="frame" x="16" y="60" width="191" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Datum" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liV-3o-d41">
-                                            <rect key="frame" x="199" y="20" width="51" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6X4-jH-1Z5">
-                                            <rect key="frame" x="309" y="20" width="50" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <rect key="frame" x="16" y="36" width="285" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="liV-3o-d41" firstAttribute="top" secondItem="oaM-ag-o5A" secondAttribute="topMargin" constant="9" id="Fpr-5Y-LS2"/>
+                                        <constraint firstItem="liV-3o-d41" firstAttribute="top" secondItem="oaM-ag-o5A" secondAttribute="topMargin" constant="25" id="Fpr-5Y-LS2"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="IDf-M2-czg" kind="show" id="2a7-Sb-5hh"/>
+                                    <outlet property="datumLabel" destination="liV-3o-d41" id="1eS-LP-ZeY"/>
+                                    <outlet property="imeLabel" destination="yx4-X7-Mof" id="g3i-hl-V0X"/>
+                                    <outlet property="prezimeLabel" destination="DHI-qP-jlp" id="o8w-6B-C0o"/>
+                                    <outlet property="statusLabel" destination="6X4-jH-1Z5" id="xzw-eh-kfl"/>
+                                    <segue destination="IDf-M2-czg" kind="show" identifier="tomajstorrabotadetail" id="2a7-Sb-5hh"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -900,12 +906,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gLP-FK-JYq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="798" y="810"/>
+            <point key="canvasLocation" x="797.60000000000002" y="809.14542728635683"/>
         </scene>
         <!--Detali-->
         <scene sceneID="NHb-6h-P81">
             <objects>
-                <viewController id="IDf-M2-czg" sceneMemberID="viewController">
+                <viewController id="IDf-M2-czg" customClass="MajstorRabotaDetailViewController" customModule="PovikajMajstor" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Fxa-YM-tpg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -965,9 +971,12 @@
                                 <rect key="frame" x="278" y="80" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Lokacija"/>
+                                <connections>
+                                    <action selector="lokacijaButtonPressed:" destination="IDf-M2-czg" eventType="touchUpInside" id="Tiw-j6-zq0"/>
+                                </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h3L-MM-dTU">
-                                <rect key="frame" x="16" y="365" width="343" height="176"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h3L-MM-dTU">
+                                <rect key="frame" x="16" y="366" width="343" height="176"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Datum na zavrsuvanje" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tRW-4F-YzN">
                                 <rect key="frame" x="16" y="552" width="199" height="34"/>
@@ -1013,6 +1022,17 @@
                         <viewLayoutGuide key="safeArea" id="cU9-PH-xFL"/>
                     </view>
                     <navigationItem key="navigationItem" title="Detali" id="32R-Vn-TPV"/>
+                    <connections>
+                        <outlet property="adresaLabel" destination="ew4-bM-BT4" id="Fc6-iD-hdi"/>
+                        <outlet property="datumLabel" destination="Vhf-cQ-rhC" id="iOx-mT-oGg"/>
+                        <outlet property="emailLabel" destination="7ur-lf-6SH" id="6Pj-Tn-sfD"/>
+                        <outlet property="image" destination="h3L-MM-dTU" id="8Cj-Hv-rfa"/>
+                        <outlet property="imeLabel" destination="Vqs-IP-rVQ" id="dRR-Eb-JDP"/>
+                        <outlet property="prezimeLabel" destination="SvF-hW-s5I" id="QIg-GT-G1O"/>
+                        <outlet property="statusLabel" destination="WuE-O7-Wbr" id="QS0-Ep-jDr"/>
+                        <outlet property="telefonLabel" destination="yBB-cv-9BT" id="6Gz-nh-H6x"/>
+                        <outlet property="zavrsendatumTextField" destination="tRW-4F-YzN" id="0U3-pR-OUf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fq2-yd-BvL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
